--- a/great-idea/css/services.css
+++ b/great-idea/css/services.css
@@ -67,16 +67,14 @@ h1, h2, h3, h4, h5 {
 .site-wrapper{
     margin: 10px auto 0 auto;
     z-index: 1;
-	width: 1024px;
+	width: 880px;
 	display: flex;
 	flex-direction: column;
 }
 .navbar{
 	display: flex;
     justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
-    
+    align-items: center;   
 }
 .navbar a{
     text-decoration: none;
@@ -89,4 +87,35 @@ h1, h2, h3, h4, h5 {
 
 .logo{
     margin-left: 50px;
+}
+
+header{
+    border-bottom: 2px solid black;
+    margin: 10px 0px;
+}
+
+.services{
+    padding: 10px 0px;
+}
+
+.services-header-img {
+    margin: 20px 0px 0px;
+}
+
+.content-parent{
+    display
+}
+
+ul {
+    list-style-type: disc;
+    padding: 20px;
+  }
+  
+  li{
+    padding: 10px;
+  }
+  
+footer p{
+    text-align:center;
+    margin: 10%;
 }
