--- a/great-idea/css/services.css
+++ b/great-idea/css/services.css
@@ -148,3 +148,18 @@ footer p{
     text-align:center;
     margin: 10%;
 }
+
+button{
+    padding: 10px;
+    width: 40%;
+    margin-top: 25px;
+    background-color: whitesmoke;
+    border: 1px solid black;
+    border-radius: 8%;
+  }
+
+button:hover{
+    background-color: grey;
+    color:white;
+    transition-duration: 0.5s;
+}
