--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -98,7 +98,7 @@ h1{
 
 button{
     padding: 10px;
-    width: 25%;
+    width: 175px;
     margin-top: 25px;
     background-color: whitesmoke;
     border: 1px solid black;
@@ -109,4 +109,28 @@ button:hover{
     background-color: grey;
     color:white;
     transition-duration: 0.5s;
+}
+.home{
+	display: flex;
+	flex-flow: wrap;
+	justify-content: center;
+	border-bottom: 2px solid black;
+	margin-bottom: 5%;
+}
+
+.home-child1{
+	width: 40%;
+	margin-top: 5%;
+	padding: 5%;
+	align-content: center;
+	text-align: center;
+	display: flex;
+    justify-content: center;
+    flex-flow: column;
+    align-items: center;
+}
+.home-child{
+	width: 40%;
+	margin-top: 5%;
+	padding: 5%;
 }
